--- a/cliente/src/styles/login.css
+++ b/cliente/src/styles/login.css
@@ -8,10 +8,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: url('../../public/img/calma_ig/calma_logo.png');
-    background-size: contain;
-    background-position: top center;
-    background-repeat: no-repeat;
 }
 
 .login-form {
@@ -46,4 +42,8 @@
 
 .login-form button:hover {
     background-color: #000;
+}
+
+.logout button{
+    border: none;
 }
