--- a/cliente/src/styles/login.css
+++ b/cliente/src/styles/login.css
@@ -4,10 +4,11 @@
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f0f2f5;
+    background-color: #516e99;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    
 }
 
 .login-form {
@@ -18,6 +19,10 @@
     width: 300px;
     display: flex;
     flex-direction: column;
+}
+
+.login-container h1{
+    color: #fff!important;
 }
 
 .login-form input {
@@ -46,4 +51,28 @@
 
 .logout button{
     border: none;
+}
+
+@media (max-width: 305px) {
+    .login-form {
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 200px;
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media (max-width: 205px) {
+    .login-form {
+        background-color: #ffffff;
+        padding: 20px;
+        border-radius: 8px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        width: 175px;
+        display: flex;
+        flex-direction: column;
+    }
 }
