--- a/cliente/src/styles/styles_home.css
+++ b/cliente/src/styles/styles_home.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+ 
 }
 
 .fila-tienda {
@@ -62,7 +63,7 @@
     text-transform: uppercase;
     margin-top: 1%;
     text-align: center;
-
+    width: 100%;
   }
   
   .contenedor-cita p {
@@ -87,3 +88,19 @@
     border-color: #b6b6b6;
     color: #fff;
   }
+
+@media (max-width: 768px) {
+  .media-container {
+    flex-direction: column; 
+  }
+
+  .media-wrapper {
+    margin-right: 0; 
+    margin-left: 20px; 
+  }
+
+  .text-container {
+    width: 50%; 
+    margin-right: 20px; 
+  }
+}
